--- a/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
+++ b/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
@@ -75,118 +75,119 @@
   <!--AGGIUNGI MISURA-->
   <ion-button [routerLink]="['/misure-acquario']" expand="block" style="padding: 0px 15px;margin: 7px 0px 0px 0px;">
     <ion-icon slot="start" name="flask-outline"></ion-icon>
-    Aggiungi Misurazioni
+    Misurazioni
   </ion-button>
 
-  <!-- Segmenti per selezionare la tipologia di oggetti visibili -->
-  <ion-segment #segment scrollable value="pesci" class="ion-margin-start ion-margin-end" style="margin-top: 20px;">
-    <ion-segment-button value="pesci" layout="icon-start">
-      <ion-label>Pesci</ion-label>
-      <ion-icon name="fish"></ion-icon>
-    </ion-segment-button>
-    <ion-segment-button value="piante" layout="icon-start">
-      <ion-label>Piante</ion-label>
-      <ion-icon name="leaf"></ion-icon>
-    </ion-segment-button>
-  </ion-segment>
+  <ion-card style="padding-bottom: 10px;">
+    <!-- Segmenti per selezionare la tipologia di oggetti visibili -->
+    <ion-segment #segment scrollable value="pesci" class="ion-margin-start ion-margin-end" style="margin-top: 20px;">
+      <ion-segment-button value="pesci" layout="icon-start">
+        <ion-label>Pesci</ion-label>
+        <ion-icon name="fish"></ion-icon>
+      </ion-segment-button>
+      <ion-segment-button value="piante" layout="icon-start">
+        <ion-label>Piante</ion-label>
+        <ion-icon name="leaf"></ion-icon>
+      </ion-segment-button>
+    </ion-segment>
 
-  <!-- Lista dei pesci presenti nell'acquario -->
-  <ion-list *ngIf="segment.value == 'pesci'">
-    <ion-item (click)="onClickPesce(pesce)" [routerLink]="['/selezione-oggetto']" *ngFor="let pesce of acquario.fishs">
+    <!-- Lista dei pesci presenti nell'acquario -->
+    <ion-list *ngIf="segment.value == 'pesci'">
+      <ion-item (click)="onClickPesce(pesce)" [routerLink]="['/selezione-oggetto']" *ngFor="let pesce of acquario.fishs">
 
-      <ion-label>
-        <!-- PARTE IMMAGINE -->
-        <div *ngIf="pesce.fishImages.length != 0" style="width: 20%;float:left;">
-          <img src="{{pesce.fishImages[0].thumbUrl}}" style="width:100%;border-radius: 5px;">
-        </div>
-        <div *ngIf="pesce.fishImages.length == 0" style="width: 20%;float:left;">
-          <img src="assets/img/icon-fish.png/" style="width:100%;border-radius: 5px;">
-        </div>
+        <ion-label>
+          <!-- PARTE IMMAGINE -->
+          <div *ngIf="pesce.fishImages.length != 0" style="width: 20%;float:left;">
+            <img src="{{pesce.fishImages[0].thumbUrl}}" style="width:100%;border-radius: 5px;">
+          </div>
+          <div *ngIf="pesce.fishImages.length == 0" style="width: 20%;float:left;">
+            <img src="assets/img/icon-fish.png/" style="width:100%;border-radius: 5px;">
+          </div>
 
-        <!-- PARTE TESTO -->
-        <div style="width: 80%;padding:0px 5px;float:right">
-          <p><small>Nome comune: <b>{{pesce.commonName}}</b></small></p>
-          <p><small>Nome scientifico: <b>{{pesce.scientificName}}</b></small></p>
-          <p><small>Zona di origine: <b>{{pesce.originZone}}</b></small></p>
-        </div>
+          <!-- PARTE TESTO -->
+          <div style="width: 80%;padding:0px 5px;float:right">
+            <p><small>Nome comune: <b>{{pesce.commonName}}</b></small></p>
+            <p><small>Nome scientifico: <b>{{pesce.scientificName}}</b></small></p>
+            <p><small>Zona di origine: <b>{{pesce.originZone}}</b></small></p>
+          </div>
 
-        <!--PARAMETRI PESCE-->
-        <div style="width: 100%;padding:5px 5px 0px 0px;float:left">
-          <!--BADGE PH -->
-          <ion-badge *ngIf="!pesce.phAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">PH</ion-badge>
-          <ion-badge *ngIf="pesce.phAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">PH</ion-badge>
+          <!--PARAMETRI PESCE-->
+          <div style="width: 100%;padding:5px 5px 0px 0px;float:left">
+            <!--BADGE PH -->
+            <ion-badge *ngIf="!pesce.phAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">PH</ion-badge>
+            <ion-badge *ngIf="pesce.phAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">PH</ion-badge>
 
-          <!--BADGE GH -->
-          <ion-badge *ngIf="!pesce.ghAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">GH</ion-badge>
-          <ion-badge *ngIf="pesce.ghAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">GH</ion-badge>
+            <!--BADGE GH -->
+            <ion-badge *ngIf="!pesce.ghAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">GH</ion-badge>
+            <ion-badge *ngIf="pesce.ghAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">GH</ion-badge>
 
-          <!--BADGE TEMPERATURE -->
-          <ion-badge *ngIf="!pesce.temperatureAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">Temperature</ion-badge>
-          <ion-badge *ngIf="pesce.temperatureAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">Temperature</ion-badge>
-        </div>
-      </ion-label>
-      
-    </ion-item>
-  </ion-list>
-  <ion-button *ngIf="segment.value == 'pesci'" 
-      (click)="onClickAdd('pesci')" [routerLink]="['/ricerca']" expand="block" color="secondary" style="padding: 0px 15px;margin: 7px 0px 0px 0px;">
-    <ion-icon slot="start" name="fish"></ion-icon>
-    Aggiungi Pesce
-  </ion-button>
-  
-  <!-- Lista delle piante presenti nell'acquario -->
-  <ion-list *ngIf="segment.value == 'piante'" >
-    <ion-item (click)="onClickPianta(pianta)" [routerLink]="['/selezione-oggetto']" *ngFor="let pianta of acquario.plants">
-      
-      <ion-label>
+            <!--BADGE TEMPERATURE -->
+            <ion-badge *ngIf="!pesce.temperatureAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">Temperature</ion-badge>
+            <ion-badge *ngIf="pesce.temperatureAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">Temperature</ion-badge>
+          </div>
+        </ion-label>
+        
+      </ion-item>
+    </ion-list>
+    <ion-button *ngIf="segment.value == 'pesci'" 
+        (click)="onClickAdd('pesci')" [routerLink]="['/ricerca']" expand="block" color="secondary" style="padding: 0px 15px;margin: 7px 0px 0px 0px;">
+      <ion-icon slot="start" name="fish"></ion-icon>
+      Aggiungi Pesce
+    </ion-button>
+    
+    <!-- Lista delle piante presenti nell'acquario -->
+    <ion-list *ngIf="segment.value == 'piante'" >
+      <ion-item (click)="onClickPianta(pianta)" [routerLink]="['/selezione-oggetto']" *ngFor="let pianta of acquario.plants">
+        
+        <ion-label>
 
-        <!-- PARTE IMMAGINE -->
-        <div *ngIf="pianta.plantImages.length != 0" style="width: 20%;float:left;">
-          <img src="{{pianta.plantImages[0].thumbUrl}}" style="width:100%">
-        </div>
-        <div *ngIf="pianta.plantImages.length == 0" style="width: 20%;float:left;">
-          <img src="assets/img/icon-plant.png/" style="width:100%">
-        </div>
+          <!-- PARTE IMMAGINE -->
+          <div *ngIf="pianta.plantImages.length != 0" style="width: 20%;float:left;">
+            <img src="{{pianta.plantImages[0].thumbUrl}}" style="width:100%">
+          </div>
+          <div *ngIf="pianta.plantImages.length == 0" style="width: 20%;float:left;">
+            <img src="assets/img/icon-plant.png/" style="width:100%">
+          </div>
 
-        <!-- PARTE TESTO -->
-        <div style="width: 80%;padding:0px 5px;float:right">
-          <!--p><small>Nome comune: <b>{{pianta.commonName}}</b></small></p-->
-          <p><small>Nome scientifico: <b>{{pianta.scientificName}}</b></small></p>
-          <p><small>Zona di origine: <b>{{pianta.originZone}}</b></small></p>
-        </div>
+          <!-- PARTE TESTO -->
+          <div style="width: 80%;padding:0px 5px;float:right">
+            <!--p><small>Nome comune: <b>{{pianta.commonName}}</b></small></p-->
+            <p><small>Nome scientifico: <b>{{pianta.scientificName}}</b></small></p>
+            <p><small>Zona di origine: <b>{{pianta.originZone}}</b></small></p>
+          </div>
 
-        <!--PARAMETRI PIANTA-->
-        <div style="width: 100%;padding:5px 5px 0px 0px;float:left">
-          <!--BADGE PH -->
-          <ion-badge *ngIf="!pianta.phAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">PH</ion-badge>
-          <ion-badge *ngIf="pianta.phAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">PH</ion-badge>
+          <!--PARAMETRI PIANTA-->
+          <div style="width: 100%;padding:5px 5px 0px 0px;float:left">
+            <!--BADGE PH -->
+            <ion-badge *ngIf="!pianta.phAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">PH</ion-badge>
+            <ion-badge *ngIf="pianta.phAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">PH</ion-badge>
 
-          <!--BADGE GH -->
-          <ion-badge *ngIf="!pianta.ghAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">GH</ion-badge>
-          <ion-badge *ngIf="pianta.ghAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">GH</ion-badge>
-          
-          <!--BADGE KH -->
-          <ion-badge *ngIf="!pianta.khAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">KH</ion-badge>
-          <ion-badge *ngIf="pianta.khAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">KH</ion-badge>
-          
-          <!--BADGE HEIGHT -->
-          <ion-badge *ngIf="!pianta.heightAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">Altezza</ion-badge>
-          <ion-badge *ngIf="pianta.heightAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">Altezza</ion-badge>
+            <!--BADGE GH -->
+            <ion-badge *ngIf="!pianta.ghAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">GH</ion-badge>
+            <ion-badge *ngIf="pianta.ghAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">GH</ion-badge>
+            
+            <!--BADGE KH -->
+            <ion-badge *ngIf="!pianta.khAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">KH</ion-badge>
+            <ion-badge *ngIf="pianta.khAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">KH</ion-badge>
+            
+            <!--BADGE HEIGHT -->
+            <ion-badge *ngIf="!pianta.heightAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">Altezza</ion-badge>
+            <ion-badge *ngIf="pianta.heightAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">Altezza</ion-badge>
 
-          <!--BADGE TEMPERATURE -->
-          <ion-badge *ngIf="!pianta.temperatureAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">Temperatura</ion-badge>
-          <ion-badge *ngIf="pianta.temperatureAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">Temperatura</ion-badge>
-        </div>
-      </ion-label>
+            <!--BADGE TEMPERATURE -->
+            <ion-badge *ngIf="!pianta.temperatureAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">Temperatura</ion-badge>
+            <ion-badge *ngIf="pianta.temperatureAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">Temperatura</ion-badge>
+          </div>
+        </ion-label>
 
-    </ion-item>
-  </ion-list>
-  <ion-button *ngIf="segment.value == 'piante'"
-      (click)="onClickAdd('piante')" [routerLink]="['/ricerca']" expand="block" color="success" style="padding: 0px 15px;margin: 7px 0px 0px 0px;">
-    <ion-icon slot="start" name="leaf"></ion-icon>
-    Aggiungi Pianta
-  </ion-button>
-
+      </ion-item>
+    </ion-list>
+    <ion-button *ngIf="segment.value == 'piante'"
+        (click)="onClickAdd('piante')" [routerLink]="['/ricerca']" expand="block" color="success" style="padding: 0px 15px;margin: 7px 0px 0px 0px;">
+      <ion-icon slot="start" name="leaf"></ion-icon>
+      Aggiungi Pianta
+    </ion-button>
+</ion-card>
   
 </ion-content>
 
